--- a/career-day/style.css
+++ b/career-day/style.css
@@ -13,6 +13,10 @@ div {
     align-items: stretch;
 }
 
+div[hidden] {
+    display: none;
+}
+
 
 button {
     border: 0px;
@@ -26,4 +30,4 @@ button {
     font-weight: bold;
     font-size:larger;
     font-kerning: 20px;
-}
+} 
