updated presentation and game

--- a/career-day/style.css
+++ b/career-day/style.css
@@ -4,18 +4,15 @@
     font-weight: bold;
 }
 
-div {
+#steps {
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: space-around;
-    align-content: space-around;
-    align-items: stretch;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-content: center;
+    align-items: center;
 }
 
-div[hidden] {
-    display: none;
-}
 
 
 button {
@@ -24,10 +21,84 @@ button {
     padding: 20px;
     margin: 10px;
     /* box-shadow: 6px 8px coral; */
-    background: #ff7f505c;
+    /* background: #85bddd; */
+    background: none;
     cursor: pointer;
     font-family: Monserrat, 'Arial Narrow Bold', sans-serif;
     font-weight: bold;
-    font-size:larger;
+    font-size: larger;
     font-kerning: 20px;
-} 
+    text-shadow: 3px 3px 6px #37596d, -3px -3px 6px #302e58, 3px -3px 6px #37596d, -3px 3px 6px #302e58;
+    color: white;
+}
+
+#sandwich-stuff {
+
+    margin: 5px 5px 5px 5px;
+    padding-top: 64px;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-content: center;
+    align-items: center;
+}
+
+
+#bread {
+    margin: 5px 5px 5px 5px;
+    padding-top: 32px;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-content: center;
+    align-items: center;
+}
+
+#bread.img {
+    margin: 10px 10px;
+}
+
+#pb-j-sandwich {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+#pb-j-sandwich[hidden] {
+    display: none;
+}
+
+div[hidden] {
+    display: none;
+}
+
+h2 {
+    padding: 24px 0px 16px;
+    text-align: center;
+    color: white;
+    text-shadow: 3px 3px 6px #37596d, -3px -3px 6px #302e58, 3px -3px 6px #37596d, -3px 3px 6px #302e58;
+}
+
+h3 {
+    font-size: 28pt;
+    text-align: center;
+    color: white;
+    text-shadow: 3px 3px 6px #37596d, -3px -3px 6px #302e58, 3px -3px 6px #37596d, -3px 3px 6px #302e58;
+}
+
+
+a:link {
+    text-decoration: none;
+}
+
+#presentation {
+    padding: 150px;
+}
+
+#congrats {
+    margin-top: 20px;
+    padding: 16px;
+}
